# dining_philosophers

./: CMakeLists.txt  philosophers.h  utils.c
philo_one/: Makefile  libft_modified_utils.c  philo_one.c  philo_one.h  philo_simulation.c  philosophers.h  philosophers_one.h  simulation_utils.c  struct_utils.c  utils.c
philo_three/: Makefile  libft_modified_utils.c  philo_three.c  philo_three.h  philosophers.h  philosophers_three.h  simulation_utils.c  struct_utils.c  utils.c
philo_two/: Makefile  libft_modified_utils.c  philo_two.c  philo_two.h  philosophers.h  philosophers_two.h  simulation_utils.c  struct_utils.c  utils.c
utils/: libft_modified_utils.c  print_message.c  utils.c
